--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,5 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+  </body class="d-flex flex-column min-vh-100">
 </html>
